# incphp

./: CMakeLists.txt  LICENSE  README.md
experiments/: evaluation.ipynb  experimentConfig.json
experiments/sat17/: evaluation.ipynb  experimentConfig.json
src/: LearnedClauseEvaluationDecorator.h  SatVariable.h  incphp.cpp  incphp.h  main.cpp
src/carj/: ScopedTimer.h  carj.cpp  carj.h
test/: TestSatVariable.cpp
